error.txt
g++ main.cpp -o prog `pkg-config --libs --cflags sdl3` `pkg-config --libs --cflags sdl3-image` 
In file included from gameObject.h:7,
                 from gameObject.cpp:1,
                 from main.cpp:9:
spriteSheet.h: In member function ‘SDL_Renderer* Spritesheet::getTexture()’:
spriteSheet.h:19:43: error: cannot convert ‘SDL_Texture*’ to ‘SDL_Renderer*’ in return
   19 |         SDL_Renderer* getTexture(){return sheet;}
      |                                           ^~~~~
      |                                           |
      |                                           SDL_Texture*
gameObject.h: In member function ‘void GameObject::updateTexture()’:
gameObject.h:45:87: error: ‘surf’ was not declared in this scope
   45 |                 void updateTexture(){texture = SDL_CreateTextureFromSurface(renderer, surf);}
      |                                                                                       ^~~~
gameObject.cpp: In member function ‘void GameObject::setSprite(Spritesheet*, int, int)’:
gameObject.cpp:53:27: error: ‘SDL_FRect* Spritesheet::clip’ is private within this context
   53 |         int newX = sheet->clip->w * x;
      |                           ^~~~
spriteSheet.h:10:20: note: declared private here
   10 |         SDL_FRect* clip = nullptr;
      |                    ^~~~
gameObject.cpp:53:27: note: field ‘SDL_FRect* Spritesheet::clip’ can be accessed via ‘SDL_FRect* Spritesheet::getRect()’
   53 |         int newX = sheet->clip->w * x;
      |                           ^~~~
      |                           getRect()
gameObject.cpp:54:27: error: ‘SDL_FRect* Spritesheet::clip’ is private within this context
   54 |         int newY = sheet->clip->h * y;
      |                           ^~~~
spriteSheet.h:10:20: note: declared private here
   10 |         SDL_FRect* clip = nullptr;
      |                    ^~~~
gameObject.cpp:54:27: note: field ‘SDL_FRect* Spritesheet::clip’ can be accessed via ‘SDL_FRect* Spritesheet::getRect()’
   54 |         int newY = sheet->clip->h * y;
      |                           ^~~~
      |                           getRect()
gameObject.cpp:57:54: error: cannot convert ‘SDL_Renderer*’ to ‘SDL_Texture*’
   57 |         SDL_RenderTexture(renderer, sheet->getTexture(), sheet->getRect(), NULL);
      |                                     ~~~~~~~~~~~~~~~~~^~
      |                                                      |
      |                                                      SDL_Renderer*
In file included from /usr/local/include/SDL3/SDL.h:75,
                 from main.cpp:6:
/usr/local/include/SDL3/SDL_render.h:2115:89: note:   initializing argument 2 of ‘bool SDL_RenderTexture(SDL_Renderer*, SDL_Texture*, const SDL_FRect*, const SDL_FRect*)’
 2115 | extern SDL_DECLSPEC bool SDLCALL SDL_RenderTexture(SDL_Renderer *renderer, SDL_Texture *texture, const SDL_FRect *srcrect, const SDL_FRect *dstrect);
      |                                                                            ~~~~~~~~~~~~~^~~~~~~
/usr/local/include/SDL3/SDL_render.h:120:16: note: class type ‘SDL_Renderer’ is incomplete
  120 | typedef struct SDL_Renderer SDL_Renderer;
      |                ^~~~~~~~~~~~
In file included from main.cpp:10:
rect.cpp: In constructor ‘Rectangle::Rectangle()’:
rect.cpp:10:18: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::x’ from ‘int’ to ‘float’ [-Wnarrowing]
   10 |         *rect = {x, y, height, width};
      |                  ^
rect.cpp:10:21: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::y’ from ‘int’ to ‘float’ [-Wnarrowing]
   10 |         *rect = {x, y, height, width};
      |                     ^
rect.cpp:10:24: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::height’ from ‘int’ to ‘float’ [-Wnarrowing]
   10 |         *rect = {x, y, height, width};
      |                        ^~~~~~
rect.cpp:10:32: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::width’ from ‘int’ to ‘float’ [-Wnarrowing]
   10 |         *rect = {x, y, height, width};
      |                                ^~~~~
rect.cpp: In constructor ‘Rectangle::Rectangle(int, int, int, int, int*)’:
rect.cpp:19:18: warning: narrowing conversion of ‘x’ from ‘int’ to ‘float’ [-Wnarrowing]
   19 |         *rect = {x, y, height, width};
      |                  ^
rect.cpp:19:21: warning: narrowing conversion of ‘y’ from ‘int’ to ‘float’ [-Wnarrowing]
   19 |         *rect = {x, y, height, width};
      |                     ^
rect.cpp:19:24: warning: narrowing conversion of ‘height’ from ‘int’ to ‘float’ [-Wnarrowing]
   19 |         *rect = {x, y, height, width};
      |                        ^~~~~~
rect.cpp:19:32: warning: narrowing conversion of ‘width’ from ‘int’ to ‘float’ [-Wnarrowing]
   19 |         *rect = {x, y, height, width};
      |                                ^~~~~
rect.cpp: In constructor ‘Rectangle::Rectangle(int, int, int, int, SDL_Renderer*, int*)’:
rect.cpp:29:18: warning: narrowing conversion of ‘x’ from ‘int’ to ‘float’ [-Wnarrowing]
   29 |         *rect = {x, y, height, width};
      |                  ^
rect.cpp:29:21: warning: narrowing conversion of ‘y’ from ‘int’ to ‘float’ [-Wnarrowing]
   29 |         *rect = {x, y, height, width};
      |                     ^
rect.cpp:29:24: warning: narrowing conversion of ‘height’ from ‘int’ to ‘float’ [-Wnarrowing]
   29 |         *rect = {x, y, height, width};
      |                        ^~~~~~
rect.cpp:29:32: warning: narrowing conversion of ‘width’ from ‘int’ to ‘float’ [-Wnarrowing]
   29 |         *rect = {x, y, height, width};
      |                                ^~~~~
rect.cpp: In member function ‘void Rectangle::draw()’:
rect.cpp:37:18: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::x’ from ‘int’ to ‘float’ [-Wnarrowing]
   37 |         *rect = {x, y, height, width};
      |                  ^
rect.cpp:37:21: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::y’ from ‘int’ to ‘float’ [-Wnarrowing]
   37 |         *rect = {x, y, height, width};
      |                     ^
rect.cpp:37:24: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::height’ from ‘int’ to ‘float’ [-Wnarrowing]
   37 |         *rect = {x, y, height, width};
      |                        ^~~~~~
rect.cpp:37:32: warning: narrowing conversion of ‘((Rectangle*)this)->Rectangle::width’ from ‘int’ to ‘float’ [-Wnarrowing]
   37 |         *rect = {x, y, height, width};
      |                                ^~~~~
make: *** [makefile:2: main] Error 1
